# ml_snake

./: .gitignore  CLAUDE.md  Cargo.toml
src/: lib.rs  main.rs
src/game/: action.rs  config.rs  engine.rs  mod.rs  state.rs
src/input/: handler.rs  mod.rs
src/metrics/: game_metrics.rs  mod.rs  performance.rs  training_stats.rs
src/modes/: human.rs  mod.rs  train.rs  visualize.rs
src/render/: renderer.rs
src/rl/: backend.rs  buffer.rs  config.rs  environment.rs  mod.rs  network.rs  observation.rs  persistence.rs  ppo.rs
