[package]
name = "ml_snake"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core ML framework
burn = { version = "0.16", features = ["train", "wgpu", "ndarray"] }
burn-tensor = "0.16"
burn-autodiff = "0.16"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Random number generation
rand = "0.8"

# Serialization for saving models
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime (for event handling)
tokio = { version = "1.43", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
approx = "0.5"  # For floating-point comparisons in tests
